--- a/src/styles/components/Profile.module.css
+++ b/src/styles/components/Profile.module.css
@@ -1,30 +1,29 @@
-
-.experienceBar {
+.profileContainer {
     display: flex;
     align-items:center;
 }
 
-.experienceBar span {
+.profileContainer > img {
+    width: 5.5rem;
+    height: 5.5rem;
+    border-radius: 50%;
+}
+
+.profileContainer div {
+    margin-left: 1.5rem;
+}
+
+.profileContainer div strong {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--title);
+}
+
+.profileContainer div p {
     font-size: 1rem;
+    margin-top: 0.5rem;
 }
 
-.experienceBar > div {
-    flex: 1;
-    height: 4px;
-    border-radius: 4px;
-    background-color: var(--gray-line);
-    margin: 0 1.5rem;
-    position: relative;
-}
-
-.experienceBar > div > div {
-    height: 4px;
-    border-radius: 4px;
-    background-color: var(--green);
-}
-
-span.currentExperience {
-    position: absolute;
-    top: 12px;
-    transform: translateX(-50%);
+.profileContainer div p img{
+    margin-right: 0.5rem;
 }
